# drtv_in_english

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUT_WITH_SUBS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.backend  IDEAS_FOR_BETTER_TRANSCRIPTION.md  LICENSE  PACKAGE_RELEASE_PLAN.md  PLAN.md  README.md  _gen.py  build.mjs  dependabot.yaml  docker-compose.nginx.conf  docker-compose.yaml  eslint.config.js  index.html  makefile  manifest.chrome.json  manifest.firefox.json  package-lock.json  package.json  privacy-policy.html  pyproject.toml  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
docs/: extension-plan.md
extension/spike/: manifest.json
package/chrome/: manifest.json
package/chrome/background/: index.js  index.js.map
package/chrome/content/: index.js  subtitle-fetcher.js.map
package/chrome/options/: options.js
package/firefox/: manifest.json
package/firefox/content/: early.js  early.js.map  index.js.map  subtitle-fetcher.js
package/firefox/options/: options.js.map
package/submission/: PERMISSION-JUSTIFICATIONS.md  SOURCE_SUBMISSION.md
spike/: README.md  content.js
src/background/: cache.ts  cors-proxy.ts  index.ts  master-manifest.ts  playlist.ts  translate-llm.ts  vtt-parser.ts  vtt-sniffer.ts
src/but_with_subs/: __init__.py  api.py  audio_chunking.py  audio_extraction.py  audio_loading.py  chunking.py  constants.py  data_models.py  database.py  device.py  downloading.py  llm.py  llm_progress.py  logging_config.py  pipeline.py  subtitling.py  text_chunking.py  tokenization_small100.py  transcribing.py  transcription_formatting.py  transcription_processing.py  translation.py  types.py  vad.py  vtt.py
src/content/: buffer-guard.ts  early.ts  index.ts  inject.ts  menu.ts  subtitle-fetcher.ts  track-injector.ts
src/danglish/: __init__.py  api.py  constants.py  data_models.py  downloading.py  hls_proxy.py  jobs.py  llm.py  logging_config.py  pipeline.py  resolver.py  vtt.py
src/drtv_in_english/: api.py  data_models.py  jobs.py  logging_config.py  resolver.py  vtt.py
src/frontend/assets/: main.css
src/frontend/views/: LandingPageView.vue
src/options/: index.html  options.ts
src/scripts/: chunk_audio.py  download_video.py  extract_audio.py  fix_dot_env_file.py  run_pipeline.py  transcribe_audio.py  translate_string.py  translate_subtitles.py
src/shared/: messaging.ts  storage.ts  types.ts
store-submission/: STORE-LISTING.md
tests/: __init__.py  test_audio_chunking.py  test_audio_extraction.py  test_audio_loading.py  test_chunking.py  test_device.py  test_downloading.py  test_end_to_end.py  test_hls_proxy.py  test_llm.py  test_llm_progress.py  test_logging_config.py  test_speaker_assignment.py  test_subtitling.py  test_text_chunking.py  test_tokenization_small100.py  test_transcribing.py  test_transcription_formatting.py  test_translation.py  test_vtt.py
